# redshift

./: .gitignore  README.md  demo_redshifts.txt  pyproject.toml
redshift_slider/: __init__.py  core.py
redshift_slider.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
