[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redshift_slider"
version = "0.1.0"
description = "Interactive redshift fitting tool with visual emission line markers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Raunaq Rai"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = ["astronomy", "spectroscopy", "redshift", "emission lines", "visualization"]

dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/raunaqrai/redshift_slider"

[project.scripts]
redshift-slider-demo = "redshift_slider.core:main"

[tool.setuptools.packages.find]
include = ["redshift_slider*"]
